example/elasticsearch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.6.2
          imagePullPolicy: IfNotPresent
          lifecycle:
            postStart:
              exec:
                command:
                  - bash
                  - "-c"
                  - |
                    [...]
          ports:
            - name: client
              containerPort: 9200
            - name: nodes
              containerPort: 9300
          volumeMounts:
            - name: data
              mountPath: /var/tmp/elasticsearch-init/
              subPath: elasticsearch
            - name: elasticsearch-data
              mountPath: "/usr/share/elasticsearch/data"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-claim
        - name: elasticsearch-data
          persistentVolumeClaim:
            claimName: elasticsearch-claim
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    service: elasticsearch
spec:
  ports:
    - port: 9200
      name: client
    - port: 9300
      name: nodes
  selector:
    app: elasticsearch
