example/iam.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam
  labels:
    app: iam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iam
  template:
    metadata:
      labels:
        app: iam
    spec:
      imagePullSecrets:
        - name: dockerregcred
      containers:
        - name: iam
          image: ergon/airlock-iam:latest-7.3
          imagePullPolicy: IfNotPresent
          ports:
            - name: https
              containerPort: 8443
          volumeMounts:
            - name: data
              mountPath: /home/airlock/iam/
              subPath: iam
            - name: secret
              mountPath: /home/airlock/iam/license.txt
              subPath: license.txt
          # TODO:
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: https
          #     scheme: HTTPS
          #   initialDelaySeconds: 60
          # readinessProbe:
          #   httpGet:
          #     path: /auth-login/health
          #     port: https
          #     scheme: HTTPS
          #   initialDelaySeconds: 120
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-claim
        - name: secret
          secret:
            secretName: iam-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: iam
  labels:
    app: iam
spec:
  selector:
    app: iam
  ports:
    - name: https
      port: 8443
