example/kibana.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:7.6.2
          imagePullPolicy: IfNotPresent
          lifecycle:
            postStart:
              exec:
                command:
                  - bash
                  - "-c"
                  - |
                    [...]
          ports:
            - containerPort: 5601
              name: webinterface
          volumeMounts:
            - name: data
              mountPath: /var/tmp/kibana-init/
              subPath: kibana
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-claim
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    service: kibana
spec:
  type: ClusterIP
  ports:
    - port: 5601
      name: webinterface
  selector:
    app: kibana
