example/mariadb.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  labels:
    app: mariadb
spec:
  serviceName: mariadb
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - image: docker.io/mariadb
          imagePullPolicy: IfNotPresent
          name: mariadb
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /docker-entrypoint-initdb.d
              subPath: mariadb
            - name: mariadb-data
              mountPath: /var/lib/mysql
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
          livenessProbe:
            exec:
              command:
                - bash
                - "-c"
                - |
                  set -ex
                  mysqladmin -u${MYSQL_USER} -p${MYSQL_PASSWORD} ping &> /dev/null
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - bash
                - "-c"
                - |
                  set -ex
                  mysql -h 127.0.0.1 -u${MYSQL_USER} -p${MYSQL_PASSWORD} -e "SELECT 1" &> /dev/null
            initialDelaySeconds: 5
            periodSeconds: 2
            timeoutSeconds: 1
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-claim
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: mariadb-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
    app: mariadb
spec:
  selector:
    app: mariadb
  ports:
    - name: mysql
      port: 3306
  clusterIP: None
