example/adminer-microgateway.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microgateway-adminer
  labels:
    app: microgateway-adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microgateway-adminer
  template:
    metadata:
      labels:
        app: microgateway-adminer
    spec:
      imagePullSecrets:
        - name: dockerregcred
      containers:
        - name: microgateway-adminer
          image: ergon/airlock-microgateway:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: https
              containerPort: 8443
          volumeMounts:
            - name: config
              mountPath: /config/config.yaml
              subPath: config.yaml
            - name: secret
              mountPath: /secret/config/
              readOnly: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 90
          readinessProbe:
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 30
      volumes:
        - name: config
          configMap:
            name: microgateway-adminer-config
        - name: secret
          secret:
            secretName: microgateway-secret
---
apiVersion: v1
kind: Service
metadata:
  name: microgateway-adminer
  labels:
    app: microgateway-adminer
spec:
  selector:
    app: microgateway-adminer
  ports:
    - name: https
      port: 8443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-microgateway-adminer
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: https
spec:
  rules:
    - http:
        paths:
          - path: /adminer
            pathType: Prefix
            backend:
              service:
                name: microgateway-adminer
                port:
                  number: 8443
