example/echoserver-microgateway.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microgateway-echoserver
  labels:
    app: microgateway-echoserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microgateway-echoserver
  template:
    metadata:
      labels:
        app: microgateway-echoserver
    spec:
      imagePullSecrets:
        - name: dockerregcred
      containers:
        - name: microgateway-echoserver
          image: docker.ergon.ch/airlock-pd-waf/airlock-microgateway:latest
          imagePullPolicy: Always
          ports:
            - name: https
              containerPort: 8443
          volumeMounts:
            - name: config-files
              mountPath: /config/
          livenessProbe:
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 90
          readinessProbe:
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 30
      volumes:
        - name: config
          configMap:
            name: microgateway-echoserver-config
        - name: secret
          secret:
            secretName: microgateway-secret
        - name: config-files
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: microgateway-echoserver
  labels:
    app: microgateway-echoserver
spec:
  selector:
    app: microgateway-echoserver
  ports:
    - name: https
      port: 8443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-microgateway-echoserver
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: https
spec:
  rules:
    - http:
        paths:
          - path: /echo
            pathType: Prefix
            backend:
              service:
                name: microgateway-echoserver
                port:
                  number: 8443
