example/grafana-microgateway.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microgateway-grafana
  labels:
    app: microgateway-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microgateway-grafana
  template:
    metadata:
      labels:
        app: microgateway-grafana
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9102"
    spec:
      imagePullSecrets:
        - name: dockerregcred
      containers:
        - name: microgateway-grafana
          image: docker.io/ergon/airlock-microgateway:2.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: https
              containerPort: 8443
            - name: probes
              containerPort: 9090
            - name: metrics
              containerPort: 9102
          volumeMounts:
            - name: config-files
              mountPath: /config/
          livenessProbe:
            failureThreshold: 9
            timeoutSeconds: 5
            httpGet:
              path: /alive
              port: probes
            initialDelaySeconds: 90
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthy
              port: probes
            initialDelaySeconds: 10
          lifecycle:
            preStop:
              exec:
                command:
                  - /usr/bin/sleep
                  - "10"
          resources:
            requests:
              memory: 256Mi
              cpu: 30m
            limits:
              memory: 4048Mi
      volumes:
        - name: config
          configMap:
            name: microgateway-grafana-config
        - name: secret
          secret:
            secretName: microgateway-secret
        - name: config-files
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: microgateway-grafana
  labels:
    app: microgateway-grafana
spec:
  selector:
    app: microgateway-grafana
  ports:
    - name: https
      port: 8443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-microgateway-grafana
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: https
spec:
  rules:
    - http:
        paths:
          - path: /grafana/
            pathType: Prefix
            backend:
              service:
                name: microgateway-grafana
                port:
                  number: 8443
