example/iam-microgateway.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microgateway-iam
  labels:
    app: microgateway-iam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microgateway-iam
  template:
    metadata:
      labels:
        app: microgateway-iam
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9102"
    spec:
      imagePullSecrets:
        - name: dockerregcred
      containers:
        - name: microgateway-iam
          image: docker.io/ergon/airlock-microgateway-nightly:2.1.0.sprint3_Build003
          imagePullPolicy: IfNotPresent
          ports:
            - name: https
              containerPort: 8443
            - name: probes
              containerPort: 9090
            - name: metrics
              containerPort: 9102
          volumeMounts:
            - name: config-files
              mountPath: /config/
          livenessProbe:
            failureThreshold: 9
            timeoutSeconds: 5
            httpGet:
              path: /alive
              port: probes
            initialDelaySeconds: 90
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthy
              port: probes
            initialDelaySeconds: 10
          lifecycle:
            preStop:
              exec:
                command:
                  - /usr/bin/sleep
                  - "10"
          resources:
            requests:
              memory: 256Mi
              cpu: 30m
            limits:
              memory: 4048Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-claim
        - name: config
          configMap:
            name: microgateway-iam-config
        - name: secret
          secret:
            secretName: microgateway-secret
        - name: config-files
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: microgateway-iam
  labels:
    app: microgateway-iam
spec:
  selector:
    app: microgateway-iam
  ports:
    - name: https
      port: 8443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-microgateway-iam
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /$
            pathType: Prefix
            backend:
              service:
                name: microgateway-iam
                port:
                  number: 8443
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: microgateway-iam
                port:
                  number: 8443
          - path: /auth-admin/
            pathType: Prefix
            backend:
              service:
                name: microgateway-iam
                port:
                  number: 8443
